--- a/nominhos-lvl3.html
+++ b/nominhos-lvl3.html
@@ -10,33 +10,43 @@
     <p>insira dois nomes para imprimir todas as combinações possíveis:</p>
     <form id="form" onsubmit="combNames(name1.value, name2.value)">
       <label for="name1">primeiro nome:</label>
-      <input type="text" name="name1" id="name1">
+      <input type="text" name="name1" id="name1" />
       <label for="name2">segundo nome:</label>
-      <input type="text" name="name2" id="name2">
+      <input type="text" name="name2" id="name2" />
       <button type="submit" id="btnSend">enviar</button>
     </form>
+    <ul id="father"></ul>
 
     <script>
-      function combNames(name1, name2){
-        document.write('<ul>');
+      let father = document.getElementById("father");
+
+      function combNames(name1, name2) {
+        event.preventDefault();
+        father.innerHTML = "";
+
         for (let i = 0; i < name1.length; i++) {
-          document.write(`<li>${name1[i]}</li>`);
-          document.write('<ul>');
+          let li = document.createElement("li");
+          let ul = document.createElement("ul");
+          li.innerHTML = name1[i];
+          father.appendChild(li);
+          father.insertAdjacentElement("beforeend", ul);
           for (let j = i + 1; j <= name1.length; j++) {
             let subs = name1.substring(i, j);
-            document.write(`<li>${subs}</li>`);
-            for(let k = 0; k < name2.length; k++){
-              document.write('<ul>');
-              for(let l = k + 1; l <= name2.length; l++){
+            let li = document.createElement("li");
+            li.innerHTML = subs;
+            ul.appendChild(li);
+            for (let k = 0; k < name2.length; k++) {
+              let ulTwo = document.createElement("ul");
+              ul.insertAdjacentElement("beforeend", ulTwo);
+              for (let l = k + 1; l <= name2.length; l++) {
                 let subs2 = name2.substring(k, l);
-                document.write(`<li>${subs + subs2}</li>`);
+                let liTwo = document.createElement("li");
+                liTwo.innerHTML = subs + subs2;
+                ulTwo.appendChild(liTwo);
               }
-              document.write('</ul>');
             }
           }
-          document.write('</ul>');
         }
-        document.write('</ul>');
       }
     </script>
   </body>
